--- a/packages/image_picker/image_picker/pubspec.yaml
+++ b/packages/image_picker/image_picker/pubspec.yaml
@@ -24,7 +24,11 @@ dependencies:
     sdk: flutter
   image_picker_android: ^0.8.4+11
   image_picker_for_web: ^2.1.0
-  image_picker_ios: ^0.8.6+1
+  image_picker_ios:
+    git:
+      url: https://github.com/ioridev/plugins.git
+      path: packages/image_picker/image_picker_ios
+      ref: HEAD
   image_picker_platform_interface: ^2.6.1
 
 dev_dependencies:
